Adicionada nova rota de verificação.
Adicionada rota de verificação da credencial do usuário para validar se a senha passada por ele foi correta ou não.
